Pipeline-EKS/K8S-YAML/Prod-httpd-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-httpd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:2.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/local/apache2/htdocs
      volumes:
        - name: html-volume
          configMap:
            name: prod-html-configmap
            items:
              - key: index.html
                path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: prod-httpd-service
spec:
  type: LoadBalancer
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
