Pipeline-EKS/K8S-YAML/flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-1
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-1
  template:
    metadata:
      labels:
        app: flask-1
    spec:
      containers:
        - name: flask1
          image: danielpinhas/flask-k8s
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-2
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-2
  template:
    metadata:
      labels:
        app: flask-2
    spec:
      containers:
        - name: flask2
          image: danielpinhas/flask2-k8s
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-3
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-3
  template:
    metadata:
      labels:
        app: flask-3
    spec:
      containers:
        - name: flask3
          image: danielpinhas/flask3-k8s
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-1
spec:
  type: NodePort
  selector:
    app: flask-1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30100

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-2
spec:
  type: NodePort
  selector:
    app: flask-2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30200
      
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-3
spec:
  type: NodePort
  selector:
    app: flask-3
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30300
